--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
                 <li><a class="menu" href="Makeup.html">Makeup</a></li>
                 <li><a class="menu" href="productos.html">Productos</a></li>
                 <li><a class="menu" href="servicios.html">Servicios</a></li>
-                <li><a class="menu" href="contacto.html">Contacto</a></li>
+                <li><a class="menu" href="contacto.php">Contacto</a></li>
             </ul>
 
             
